Details
-
Bug
-
Status: Resolved
-
P3
-
Resolution: Fixed
-
10
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8205793 | 11.0.1 | Erik Joelsson | P3 | Resolved | Fixed | team |
JDK-8221746 | openjdk8u222 | Erik Joelsson | P3 | Resolved | Fixed | b01 |
JDK-8221697 | openjdk8u212 | Erik Joelsson | P3 | Resolved | Fixed | b02 |
Description
FULL PRODUCT VERSION :
java version "10" 2018-03-20
Java(TM) SE Runtime Environment 18.3 (build 10+46)
Java HotSpot(TM) 64-Bit Server VM 18.3 (build 10+46, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.1.7601]
A DESCRIPTION OF THE PROBLEM :
The value for the system property java.vm.vendor includes quotation marks.
REGRESSION. Last worked in version 9.0.4
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
public class VendorTest
{
public static void main( String[] args )
{
System.out.println( System.getProperty( "java.vm.vendor" ) );
}
}
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Output:
Oracle Corporation
ACTUAL -
Output:
"Oracle Corporation"
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
public class VendorTest
{
public static void main( String[] args )
{
System.out.println( System.getProperty( "java.vm.vendor" ) );
}
}
---------- END SOURCE ----------
java version "10" 2018-03-20
Java(TM) SE Runtime Environment 18.3 (build 10+46)
Java HotSpot(TM) 64-Bit Server VM 18.3 (build 10+46, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.1.7601]
A DESCRIPTION OF THE PROBLEM :
The value for the system property java.vm.vendor includes quotation marks.
REGRESSION. Last worked in version 9.0.4
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
public class VendorTest
{
public static void main( String[] args )
{
System.out.println( System.getProperty( "java.vm.vendor" ) );
}
}
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Output:
Oracle Corporation
ACTUAL -
Output:
"Oracle Corporation"
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
public class VendorTest
{
public static void main( String[] args )
{
System.out.println( System.getProperty( "java.vm.vendor" ) );
}
}
---------- END SOURCE ----------
Attachments
Issue Links
- backported by
-
JDK-8205793 System property java.vm.vendor value includes quotation marks
-
- Resolved
-
-
JDK-8221697 System property java.vm.vendor value includes quotation marks
-
- Resolved
-
-
JDK-8221746 System property java.vm.vendor value includes quotation marks
-
- Resolved
-
- relates to
-
JDK-8189761 COMPANY_NAME, IMPLEMENTOR, BUNDLE_VENDOR, VENDOR, but no configure flag
-
- Resolved
-