8200115: System property java.vm.vendor value includes quotation marks

Reviewed-by: tbell, asaha