src/hotspot/share/runtime/vm_version.cpp
@@ -115,7 +115,7 @@ const char* Abstract_VM_Version::vm_name() {
 
 const char* Abstract_VM_Version::vm_vendor() {
 #ifdef VENDOR
-  return XSTR(VENDOR);
+  return VENDOR;
 #else
   return "Oracle Corporation";
 #endif
